zana er en bandit